<resources>
    <string name="app_name">Mini Egypt News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mini Egypt News</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_top_headlines">Top Headlines</string>
    <string name="menu_business">Business</string>
    <string name="menu_entertainment">"Entertainment "</string>
    <string name="menu_health">Health</string>
    <string name="menu_science">Science</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_technology">Technology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>