<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top_headlines"
            android:icon="@drawable/ic_baseline_trending_up_24"
            android:title="@string/menu_top_headlines" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_entertainment"
            android:title="@string/menu_entertainment" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_business"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_health"
            android:title="@string/menu_health" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_baseline_science_24"
            android:title="@string/menu_science" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_sports"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_technology"
            android:title="@string/menu_technology" />
    </group>

</menu>